--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Max-Andre Zils <zilsmc@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
     "parcel-bundler": "^1.12.3",
     "sass": "^1.22.3",
     "typescript": "^3.5.3"
