--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html"
+    "prebuild": "./node_modules/.bin/eslint *.js",
+    "dev": "parcel ./src/html/index.hbs",
+    "build": "parcel build ./src/html/index.hbs"
   },
   "keywords": [],
   "author": "Max-Andre Zils <zilsmc@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
+    "eslint": "^6.0.1",
     "parcel-bundler": "^1.12.3",
     "sass": "^1.22.3",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "parcel-plugin-handlebars": "^0.4.4"
   }
 }
