--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "./node_modules/.bin/eslint ./src/javascript/* && echo 'Lint Completed...'",
-    "dev": "parcel ./src/html/index.hbs",
-    "build": "parcel build ./src/html/index.hbs",
+    "dev": "parcel ./src/html/index.html",
+    "build": "parcel build ./src/html/index.html",
     "lint": "eslint --fix ./src/javascript/* && echo 'Lint Completed...'",
     "watch": "watch 'clear && npm run -s test | tap-nirvana && npm run -s lint' src"
   },
@@ -28,7 +28,5 @@
     "typescript": "^3.5.3",
     "watch": "^1.0.2"
   },
-  "dependencies": {
-    "parcel-plugin-handlebars": "^0.4.4"
-  }
+  "dependencies": {}
 }
