added building to a public url to package.json

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prebuild": "./node_modules/.bin/eslint ./src/typescript/* && echo 'Lint Completed...'",
-    "dev"     : "parcel ./src/html/index.html",
-    "build"   : "parcel build ./src/html/index.html",
-    "lint"    : "eslint --fix ./src/typescript/* && echo 'Lint Completed...'",
-    "watch"   : "watch 'clear && npm run -s test | tap-nirvana && npm run -s lint' src",
-    "clean"   : "rm -rf dist/*"
+    "dev": "parcel ./src/html/index.html",
+    "build": "parcel build ./src/html/index.html",
+    "lint": "eslint --fix ./src/typescript/* && echo 'Lint Completed...'",
+    "watch": "watch 'clear && npm run -s test | tap-nirvana && npm run -s lint' src",
+    "clean": "rm -rf dist/*",
+    "public-url": "parcel build ./src/html/index.html --public-url ./",
+    "deploy": "npm run public-url && surge --project ./dist/ --domain UPDATE_DOMAIN.surge.sh"
   },
   "keywords": [],
   "author": "Max-Andre Zils <zilsmc@gmail.com>",
